--- a/kalenda/templates/kalenda/appointment_calendar.html
+++ b/kalenda/templates/kalenda/appointment_calendar.html
@@ -1,14 +1,10 @@
+{% extends 'kalenda/base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Kalenda | Appointment</title>
-  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+{% block title %}Kalenda | Appointment {% endblock %}
 
-<link href='{% static "kalenda/css/fullcalendar.css" %}' rel='stylesheet' />
-<link href='{% static "kalenda/css/fullcalendar.print.css" %}' rel='stylesheet' media='print' />
+{% block headscripts %}
 <script src='{% static "kalenda/js/jquery-1.10.2.js" %}' type="text/javascript"></script>
 <script src='{% static "kalenda/js/jquery-ui.custom.min.js" %}' type="text/javascript"></script>
 <script src='{% static "kalenda/js/fullcalendar.js" %}' type="text/javascript"></script>
@@ -172,6 +168,11 @@
 	});
 
 </script>
+{% endblock %}
+
+{% block headstyles %}
+<link href='{% static "kalenda/css/fullcalendar.css" %}' rel='stylesheet' />
+<link href='{% static "kalenda/css/fullcalendar.print.css" %}' rel='stylesheet' media='print' />
 <style>
 
 	body {
@@ -228,9 +229,10 @@
 		}
 
 </style>
-</head>
-<body>
+{% endblock %}
 
+{% block body %}
+<a href="{% url 'kalenda:set_time' calendar_id='asd' datestring='asd' %}">Test</a>
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
@@ -262,5 +264,4 @@
 </section>
 
 
-</body>
-</html>
+{% endblock %}
