--- a/kalenda/templates/kalenda/calendars.html
+++ b/kalenda/templates/kalenda/calendars.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Kalenda | Calendars</title>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends 'kalenda/base.html' %}
+    {% block title%} Kalenda | Calendars {% endblock %}
+
+{% block body %}
 
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -51,14 +47,14 @@
   </div>
 </section>
 
+{% endblock %}
 
-<script>
+{% block bodyscripts %}
+    <script>
 
-  function manageCalendar(calendar_url){
-    location.href = calendar_url;
-  }
+      function manageCalendar(calendar_url){
+        location.href = calendar_url;
+      }
 
-</script>
-
-</body>
-</html>
+    </script>
+{% endblock %}
