--- a/kalenda/templates/kalenda/events.html
+++ b/kalenda/templates/kalenda/events.html
@@ -1,20 +1,17 @@
+{% extends 'kalenda/base.html' %}
 {% load custom_filters %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Kalenda | Events</title>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body>
+    {% block title %}Kalenda | Events {% endblock %}
+
+
+{% block body %}
 
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
 
     </nav>
-    <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
+    <a href="{% url 'home' %}" class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
       </svg>
@@ -28,50 +25,66 @@
 </header>
 
 <section class="text-gray-700 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-wrap -m-4">
-        {% for event in events %}
-      <div class="p-4 md:w-1/3">
-        <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
-          <div class="p-6">
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{event.summary}}</h1>
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">START: {{event.start.dateTime|stringtodate}}</h2>
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">END: {{event.end.dateTime|stringtodate}}</h2>
-            <p class="leading-relaxed mb-3">{{event.description}}</p>
-            <div class="flex items-center flex-wrap ">
-              <a class="text-blue-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
-                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
-              <span class="text-gray-600 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-300">
-                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                  <circle cx="12" cy="12" r="3"></circle>
-                </svg>1.2K
+  <div class="container px-5 mx-auto">
+    <div class="text-center">
+      <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-gray-900 mb-4">Appointments:</h1>
+      <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto"></p>
+    </div>
+    <div class="flex-col lg:w-4/5 sm:mx-auto sm:mb-2 -mx-2">
+      {% for event in events %}
+      <div class="p-2 sm:w-1/1 w-full">
+        <div class="bg-gray-200 rounded flex p-4 px-10 h-full items-center justify-center">
+<!--          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="text-blue-500 w-6 h-6 flex-shrink-0 mr-4" viewBox="0 0 24 24">-->
+<!--            <path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>-->
+<!--            <path d="M22 4L12 14.01l-3-3"></path>-->
+<!--          </svg>-->
+          <div class="w-6/6 mx-10 font-title text-xl text-center">{{event.summary}}</div>
+
+
+        </div>
+        <div class="bg-gray-200 rounded flex p-4 px-10 h-full items-center">
+          <div class="w-3/6 mx-16 text-xs">{{event.description}}</div>
+          <div class="w-2/6 border-solid border-4 border-gray-400 flex p-2 justify-around">
+            <div class="title-font w-2/2 bg-gray-300 p-2 text-center">
+              <span class="font-medium">
+                  {{event.start.dateTime|datetimetodisplaytime}}
               </span>
-              <span class="text-gray-600 inline-flex items-center leading-none text-sm">
-                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                  <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-                </svg>6
+              <br>
+              <span class="font-thin text-xs">
+                {{event.start.dateTime|datetimetodisplaydate}}
+              </span>
+            </div>
+            <div class="text-xs font-weight-thin mx-2 self-center "> <span>to</span> </div>
+            <div class="title-font w-2/2 bg-gray-300 p-2 text-center">
+              <span class="font-medium">
+                  {{event.end.dateTime|datetimetodisplaytime}}
+              </span>
+              <br>
+              <span class="font-thin text-xs">
+                {{event.end.dateTime|datetimetodisplaydate}}
               </span>
             </div>
           </div>
+
+
         </div>
+
       </div>
-        {% endfor %}
+      {% endfor %}
+
+
 
     </div>
+    <button class="flex mx-auto mt-16 text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>
   </div>
 </section>
 
+{% endblock %}
+
+{% block bodyscripts %}
 <script>
   function setAppointment(){
     location.href = "{% url 'kalenda:set_appointment' calendar_id=calendar_id %}";
   }
 </script>
-
-</body>
-</html>
+{% endblock %}
