--- a/kalenda/templates/kalenda/index.html
+++ b/kalenda/templates/kalenda/index.html
@@ -1,11 +1,10 @@
+{% extends 'kalenda/base.html' %}
 {% load socialaccount %}
 {% load static %}
-<html>
-  <head>
-    <title>Kalenda | Home</title>
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-  </head>
-  <body>
+
+{% block title%} Kalenda | Home {% endblock %}
+
+{% block body %}
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -44,11 +43,11 @@
       </h1>
       <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">
+        <button onclick="goToLink('{%if user.is_authenticated %} {% url 'kalenda:calendars' %} {% else %} {% provider_login_url 'google' %} {% endif %}')" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">
           {% if user.is_authenticated %}
-            <a href="{% url 'kalenda:calendars' %}">View Calendars</a>
+            View Calendars
           {% else %}
-            <a href="{% provider_login_url 'google' %}">Login with Google</a>
+            Login with Google
           {% endif %}
         </button>
 <!--        <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg">Button</button>-->
@@ -123,7 +122,14 @@
   </div>
 </section>
 
+  {% endblock %}
 
+{% block bodyscripts %}
+<script>
+  function goToLink(url){
+    location.href = url;
+  }
+</script>
 
-  </body>
-</html>
+{% endblock %}
+
