Updated Calendar to Kalenda Colors

--- a/kalenda/static/kalenda/css/fullcalendar.css
+++ b/kalenda/static/kalenda/css/fullcalendar.css
@@ -133,8 +133,16 @@ html .fc,
 	/* background: #fcf8e3; */
 }
 
+.fc-past > div > div.fc-day-number{
+    background-color: #DEDEDE;
+    color: #FFFFFF;
+    border-radius: 50%;
+    margin: 4px;
+}
+
+
 .fc-state-highlight > div > div.fc-day-number{
-    background-color: #ff3b30;
+    background-color: #4299E1;
     color: #FFFFFF;
     border-radius: 50%;
     margin: 4px;
@@ -211,8 +219,8 @@ html .fc,
 
 
 .fc-state-default {
-	border-color: #ff3b30;
-	color: #ff3b30;	
+	border-color: #4299e1;
+	color: #4299e1;
 }
 .fc-button-month.fc-state-default, .fc-button-agendaWeek.fc-state-default, .fc-button-agendaDay.fc-state-default{
     min-width: 67px;
@@ -249,11 +257,11 @@ html .fc,
 .fc-state-disabled {
 	cursor: default;
 	background-image: none;
-	background-color: #FFE3E3;
+	background-color: #4299e1;
 	filter: alpha(opacity=65);
 	box-shadow: none;
 	border:1px solid #FFE3E3;
-	color: #ff3b30;
+	color: #FFF;
 	}
 
 	
@@ -273,18 +281,18 @@ html .fc,
 .fc-event {
 	border: 1px solid #FFF; /* default BORDER color */
 	background-color: #FFF; /* default BACKGROUND color */
-	color: #919191;               /* default TEXT color */
+	color: #FFFFFF;               /* default TEXT color */
 	font-size: 12px;
 	cursor: default;
 }
 .fc-event.chill{
     background-color: #f3dcf8;
 }
-.fc-event.info{
-    background-color: #c6ebfe;
+.fc-event.available{
+    background-color: #4299E1;
 }
-.fc-event.important{
-    background-color: #FFBEBE;
+.fc-event.unavailable{
+    background-color: #DEDEDE;
 }
 .fc-event.success{
     background-color: #BEFFBF;
@@ -636,18 +644,23 @@ table.fc-header{
     padding: 6px;
     text-align: center;
 }
-.fc-sun, .fc-sat{
+.fc-sun, .fc-sat {
+}
+
+.fc-unavailable {
     color: #b8b8b8;
 }
 
-.fc-week .fc-day:hover .fc-day-number{
-    background-color: #B8B8B8;
+
+.fc-week .fc-future.fc-day:hover .fc-day-number{
+    background-color: #4299E1;
     border-radius: 50%;
     color: #FFFFFF;
     transition: background-color 0.2s;
 }
+
 .fc-week .fc-day.fc-state-highlight:hover .fc-day-number{
-    background-color:  #ff3b30;
+    background-color:  ##4299E1;
 }
 .fc-button-today{
     border: 1px solid rgba(255,255,255,.0);
