--- a/kalenda/templates/kalenda/appointment_calendar.html
+++ b/kalenda/templates/kalenda/appointment_calendar.html
@@ -5,6 +5,9 @@
 {% block title %}Kalenda | Appointment {% endblock %}
 
 {% block headscripts %}
+
+{% url 'kalenda:set_time' calendar_id=calendar_id as settimeurl %}
+
 <script src='{% static "kalenda/js/jquery-1.10.2.js" %}' type="text/javascript"></script>
 <script src='{% static "kalenda/js/jquery-ui.custom.min.js" %}' type="text/javascript"></script>
 <script src='{% static "kalenda/js/fullcalendar.js" %}' type="text/javascript"></script>
@@ -18,7 +21,7 @@
 
 		/*  className colors
 
-		className: default(transparent), important(red), chill(pink), success(green), info(blue)
+		className: default(transparent), unavailable(red), chill(pink), success(green), available(blue)
 
 		*/
 
@@ -76,19 +79,14 @@
 			allDaySlot: false,
 			selectHelper: true,
 			select: function(start, end, allDay) {
-				var title = prompt('Event Title:');
-				if (title) {
-					calendar.fullCalendar('renderEvent',
-						{
-							title: title,
-							start: start,
-							end: end,
-							allDay: allDay
-						},
-						true // make the event "stick"
-					);
-				}
-				calendar.fullCalendar('unselect');
+			    var currentTime = new Date();
+			    console.log(start)
+                if (start > currentTime){
+				  var selected_date = start.getMonth()+1 +'-'+ start.getDate() +'-'+ start.getFullYear();
+				  var url = "{{settimeurl|urlencode}}" +'?selected_date=' + selected_date;
+				  location.href = url
+                }
+
 			},
 			droppable: true, // this allows things to be dropped onto the calendar !!!
 			drop: function(date, allDay) { // this function is called when something is dropped
@@ -116,51 +114,51 @@
 			},
 
 			events: [
-				{
-					title: 'All Day Event',
-					start: new Date(y, m, 1)
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: new Date(y, m, d-3, 16, 0),
-					allDay: false,
-					className: 'info'
-				},
-				{
-					id: 999,
-					title: 'Repeating Event',
-					start: new Date(y, m, d+4, 16, 0),
-					allDay: false,
-					className: 'info'
-				},
+<!--				{-->
+<!--					title: 'All Day Event',-->
+<!--					start: new Date(y, m, 1)-->
+<!--				},-->
+<!--				{-->
+<!--					id: 999,-->
+<!--					title: 'Repeating Event',-->
+<!--					start: new Date(y, m, d-3, 16, 0),-->
+<!--					allDay: false,-->
+<!--					className: 'info'-->
+<!--				},-->
+<!--				{-->
+<!--					id: 999,-->
+<!--					title: 'Repeating Event',-->
+<!--					start: new Date(y, m, d+4, 16, 0),-->
+<!--					allDay: false,-->
+<!--					className: 'info'-->
+<!--				},-->
 				{
 					title: 'Unavailable',
 					start: new Date(y, m, d, 10, 30),
 					allDay: true,
-					className: 'important'
+					className: 'unavailable'
 				},
 				{
 					title: 'Start',
 					start: new Date(y, m, d+1, 7, 25),
 					end: new Date(y, m, d+1, 7, 0),
 					allDay: false,
-					className: 'info'
+					className: 'available'
 				},
 				{
 					title: 'End',
 					start: new Date(y, m, d+1, 22, 0),
 					end: new Date(y, m, d+1, 22, 0),
 					allDay: false,
-					className: 'info'
+					className: 'available'
 				},
-				{
-					title: 'Click for Google',
-					start: new Date(y, m, 28),
-					end: new Date(y, m, 29),
-					url: 'http://google.com/',
-					className: 'success'
-				}
+<!--				{-->
+<!--					title: 'Click for Google',-->
+<!--					start: new Date(y, m, 28),-->
+<!--					end: new Date(y, m, 29),-->
+<!--					url: 'http://google.com/',-->
+<!--					className: 'success'-->
+<!--				}-->
 			],
 		});
 
@@ -232,7 +230,7 @@
 {% endblock %}
 
 {% block body %}
-<a href="{% url 'kalenda:set_time' calendar_id='asd' datestring='asd' %}">Test</a>
+
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
