added Vue blocks in setting appointments

--- a/kalenda/templates/kalenda/base.html
+++ b/kalenda/templates/kalenda/base.html
@@ -10,6 +10,9 @@
 <body>
 {% block body %}{% endblock %}
 {% block bodyscripts %}{% endblock %}
+<script>
+    {%block bodylivescripts %} {% endblock %}
+</script>
 
 </body>
 </html>
