--- a/kalenda/templates/kalenda/set_appointment_blocks/confirmed.html
+++ b/kalenda/templates/kalenda/set_appointment_blocks/confirmed.html
@@ -42,11 +42,11 @@
               </div>
       </div>
     </div>
-    <div class="flex-col flex-wrap justify-around py-20">
-        <div class="flex justify-center">
-            <p class="text-xs text-gray-500 mt-3 mr-10">Want to have your own booking link?</p>
-            <input class="bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 text-base px-4 py-2 mb-4" placeholder="Email" type="email">
-            <div><button class="text-white bg-blue-500 py-3 px-8 border-0 focus:outline-none hover:bg-blue-600 rounded text-sm">Try now</button></div>
+    <div class="flex flex-wrap justify-around py-20">
+        <div class="flex-col justify-center">
+            <div class="sm:w-1/1"><p class="text-xs text-gray-500 mt-3 mr-10">Want to have your own booking link?</p></div>
+            <div><input class="bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 text-base px-4 py-2 mb-4" placeholder="Email" type="email"></div>
+            <div><div><button class="text-white bg-blue-500 py-3 px-8 border-0 focus:outline-none hover:bg-blue-600 rounded text-sm">Try now</button></div></div>
         </div>
     </div>
   </div>
