--- a/kalenda/templates/kalenda/base.html
+++ b/kalenda/templates/kalenda/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Kalenda{% endblock %}</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block headscripts %}{% endblock %}
     {% block headstyles %}{% endblock %}
 </head>
