--- a/kalenda/templates/kalenda/calendars.html
+++ b/kalenda/templates/kalenda/calendars.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 <header class="text-gray-700 body-font">
-  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+  <div class="container flex flex-wrap p-5 flex-col md:flex-row items-center">
     <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
 
     </nav>
@@ -21,21 +21,48 @@
   </div>
 </header>
 
-
 <section class="text-gray-700 body-font">
-  <div class="container px-5 mx-auto">
-    <div class="flex flex-col text-center w-full mb-5">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Choose the Calendar you want to manage</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom.</p>
+  <div class="container px-5 py-10 mx-auto flex flex-wrap">
+
+    <div class="flex flex-col text-center justify-center w-full mb-5">
+      <h1 class="text-2xl md:text-6xl lg:text-2xl font-medium title-font mb-4 text-gray-900">Choose the Calendar you want to manage</h1>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag .</p>
     </div>
 
     <div class="flex flex-wrap -m-4">
       {% for calendar in calendars %}
-      <div class="lg:w-1/3 sm:w-1/2 p-4" onclick="manageCalendar('{% url 'kalenda:manage' calendar_id=calendar.id%}')">
-        <div class="flex relative content-center" style="background-color: {{calendar.color}}">
+      <div class="p-4 lg:w-1/2 md:w-full cursor-pointer" onclick="manageCalendar('{% url 'kalenda:manage' calendar_id=calendar.id%}')">
+        <div class="flex border-2 rounded-lg border-gray-200 hover:border-blue-400 p-8 sm:flex-row flex-col" style="background-color: {{calendar.color}}">
+          <div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 flex-shrink-0">
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
+              <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+            </svg>
+          </div>
+          <div class="flex-grow">
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{calendar.displayText}}</h2>
+            <div class="flex break-all"><div>{{calendar.id}}</div></div>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+
+<section class="text-gray-700 body-font">
+  <div class="container px-5 mx-auto">
+    <div class="flex flex-col text-center justify-center w-full mb-5">
+      <h1 class="md:text-4xl lg:text-2xl font-medium title-font mb-4 text-gray-900">Choose the Calendar you want to manage</h1>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom.</p>
+    </div>
+
+    <div class="flex flex-wrap self-center">
+      {% for calendar in calendars %}
+      <div class="lg:w-1/3 md:w-1/1 sm:w-1/1  p-4" >
+        <div class="flex relative" style="background-color: {{calendar.color}}">
           <div class="absolute" style="top: 50%;left: 50%;transform: translate(-50%, -50%);">{{calendar.displayText}}</div>
-          <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <p class="leading-relaxed text-sm truncate text-blue-500">{{calendar.id}}</p>
+          <div class="px-8 py-10 relative truncate z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
+            <p class="leading-relaxed text-sm break-all text-blue-500">{{calendar.id}}</p>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{calendar.displayText}}</h1>
             <p class="leading-relaxed"></p>
           </div>
