--- a/kalenda/templates/kalenda/events.html
+++ b/kalenda/templates/kalenda/events.html
@@ -42,8 +42,8 @@
 
 
         </div>
-        <div class="bg-gray-200 rounded flex p-4 px-10 h-full items-center">
-          <div class="w-3/6 mx-16 text-xs">{{event.description}}</div>
+        <div class="bg-gray-200 rounded flex p-4 px-10 h-full items-center justify-between">
+          <div class="w-3/6 lg:mx-16 text-xs break-all">{{event.description}}</div>
           <div class="w-2/6 border-solid border-4 border-gray-400 flex p-2 justify-around">
             <div class="title-font w-2/2 bg-gray-300 p-2 text-center">
               <span class="font-medium">
@@ -75,7 +75,7 @@
 
 
     </div>
-    <button class="flex mx-auto mt-16 text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>
+<!--    <button class="flex mx-auto mt-16 text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>-->
   </div>
 </section>
 
