--- a/kalenda/templates/kalenda/index.html
+++ b/kalenda/templates/kalenda/index.html
@@ -33,7 +33,7 @@
 </header>
 
 <section class="text-gray-700 body-font">
-  <div class="container mx-auto flex px-5 py-20 mt-10 md:flex-row flex-col items-center">
+  <div class="container mx-auto flex px-5 md:py-20 mt-10 md:flex-row flex-col items-center">
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
       <img class="object-cover object-center rounded" alt="hero" src="{% static 'kalenda/images/hero_image.png' %}">
     </div>
@@ -41,7 +41,7 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Appointments should be
         <br class="hidden lg:inline-block">EASY!
       </h1>
-      <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+      <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk</p>
       <div class="flex justify-center">
         <button onclick="goToLink('{%if user.is_authenticated %} {% url 'kalenda:calendars' %} {% else %} {% provider_login_url 'google' %} {% endif %}')" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">
           {% if user.is_authenticated %}
