--- a/kalenda/templates/kalenda/set_appointment_blocks/enter_details.html
+++ b/kalenda/templates/kalenda/set_appointment_blocks/enter_details.html
@@ -1,6 +1,6 @@
 <section v-if="enter_details" class="text-gray-700 body-font relative">
 
-  <div class="container px-24 py-10 sm:px-5 sm:m-auto flex sm:flex-no-wrap flex-wrap">
+  <div class="container px-24 md:py-10 sm:px-5 sm:m-auto flex sm:flex-no-wrap flex-wrap">
 <!--    <div class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">-->
 <!--      <iframe width="100%" height="100%" class="absolute inset-0" frameborder="0" title="map" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=%C4%B0zmir+(My%20Business%20Name)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>-->
 <!--      <div class="bg-white relative flex flex-wrap py-6">-->
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-    <div class="px-32 sm:px-5 lg:w-2/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+    <div class="lg:px-32 sm:px-5 lg:w-2/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
       <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Enter Appointment Details</h2>
 <!--      <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>-->
       <input class="bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 text-base px-4 py-2 mb-4" placeholder="Guest Name" type="text" required>
