--- a/kalenda/templates/kalenda/calendars.html
+++ b/kalenda/templates/kalenda/calendars.html
@@ -15,8 +15,8 @@
       <span class="ml-3 text-xl">kalenda</span>
     </a>
     <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
-      <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">+ Add Calendar
-      </button>
+      <a href="https://calendar.google.com/calendar/r/settings/createcalendar" target="_blank" class="border-bg-gray rounded inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">+ Add Calendar
+      </a>
     </div>
   </div>
 </header>
@@ -30,6 +30,12 @@
     </div>
 
     <div class="flex flex-wrap -m-4">
+      <div class="bg-green-500 hover:bg-green-400 w-64 h-32">
+    	<div class="flex w-64 h-32 justify-center items-center">
+    		<div><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M19.51 3.08L3.08 19.51c.09.34.27.65.51.9.25.24.56.42.9.51L20.93 4.49c-.19-.69-.73-1.23-1.42-1.41zM11.88 3L3 11.88v2.83L14.71 3h-2.83zM5 3c-1.1 0-2 .9-2 2v2l4-4H5zm14 18c.55 0 1.05-.22 1.41-.59.37-.36.59-.86.59-1.41v-2l-4 4h2zm-9.71 0h2.83L21 12.12V9.29L9.29 21z"/></svg></div>
+    	</div>
+    	<div class="tile-title">Title</div>
+    </div>
       {% for calendar in calendars %}
       <div class="p-4 lg:w-1/2 md:w-full cursor-pointer" onclick="manageCalendar('{% url 'kalenda:manage' calendar_id=calendar.id%}')">
         <div class="flex border-2 rounded-lg border-gray-200 hover:border-blue-400 p-8 sm:flex-row flex-col" style="background-color: {{calendar.color}}">
